<resources>
    <string name="app_name">FirstJetpackSample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="age">Age</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
</resources>